--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
   },
   "license": "W3C-20150513",
   "dependencies": {
+    "commander": "^2.20.0",
     "node-fetch": "^2.4.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
   }
 }
