--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "license": "W3C-20150513",
   "dependencies": {
     "commander": "^2.20.0",
-    "node-fetch": "^2.6.1",
-    "underscore": "^1.9.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
