Using npm:command

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,9 @@
 {
   "tasks": {
-    "main": "deno run --allow-net --allow-env=HOME --allow-read main.ts",
+    "main":    "deno run --allow-net --allow-env=HOME --allow-read main.ts",
     "compile": "deno compile --allow-net --allow-env=HOME --allow-read main.ts",
-    "t1": "deno run --allow-net --allow-env=HOME --allow-read main.ts -d epub33-with-dedication",
-    "t2": "deno run --allow-net --allow-env=HOME --allow-read main.ts -d epub33-without-dedication"
+    "t1":      "deno run --allow-net --allow-env=HOME --allow-read main.ts -d epub33-with-dedication",
+    "t2":      "deno run --allow-net --allow-env=HOME --allow-read main.ts -d epub33-without-dedication",
+    "bintest": "publ_ack -d epub33-with-dedication" 
   }
 }
